norminette/tests/rules/ko_white_space_eof.c
int	main(void)
{
	int	i;

	i = 0;
}
	